// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-ApiUsageInstruction correctly 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-4 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-8"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://data.brreg.no/enhetsregisteret/api"
    col2="Produksjon"
    key="https://data.brreg.no/enhetsregisteret/apiProduksjon"
  />
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-12 pl-0"
    >
      <a
        className="mr-5"
        href="https://data.brreg.no/enhetsregisteret/api/docs/index.html"
      >
        Documentation
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
      <a
        className="mr-5"
        href="https://raw.githubusercontent.com/brreg/openAPI/master/specs/enhetsregisteret.json"
      >
        Specification
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </div>
  </div>
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly apiSpecUrl and apiDocUrl are not set 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-4 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-8"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://data.brreg.no/enhetsregisteret/api"
    col2="Produksjon"
    key="https://data.brreg.no/enhetsregisteret/apiProduksjon"
  />
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly apiSpecUrl is not set 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-4 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-8"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://data.brreg.no/enhetsregisteret/api"
    col2="Produksjon"
    key="https://data.brreg.no/enhetsregisteret/apiProduksjon"
  />
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-12 pl-0"
    >
      <a
        className="mr-5"
        href="https://data.brreg.no/enhetsregisteret/api/docs/index.html"
      >
        Documentation
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </div>
  </div>
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly apiSpecUrl is not set 2`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-4 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-8"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
  <TwoColRow
    col1="https://data.brreg.no/enhetsregisteret/api"
    col2="Produksjon"
    key="https://data.brreg.no/enhetsregisteret/apiProduksjon"
  />
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-12 pl-0"
    >
      <a
        className="mr-5"
        href="https://raw.githubusercontent.com/brreg/openAPI/master/specs/enhetsregisteret.json"
      >
        Specification
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </div>
  </div>
</ListRegular>
`;

exports[`should render api-ApiUsageInstruction correctly with no props 1`] = `
<ListRegular
  bottomMargin={true}
  title="Start using the API"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-4 pl-0"
    >
      <h4
        className=""
      >
        Server URL
      </h4>
    </div>
    <div
      className="col-8"
    >
      <h4
        className=""
      >
        Description
      </h4>
    </div>
  </div>
</ListRegular>
`;
